# D47crunch

./: LICENSE  README.md  __init__.py  build_doc.py  changelog.md  license.md  new-release-checklist.md  pyproject.toml  readme.md  requirements.txt  setup.py  todo.md
D47crunch/: __init__.py
code_examples/data_quality/: example.py
code_examples/virtual_data/: output.txt
docpages/: old_documentation.md
docs/: api.html  better_documentation.md  cli.md  discussion.md  documentation.md  howto.md  index.html  temp.html  tutorial.md  virtual_data_code_results.txt
examples/: anchors.csv  example.py  exclude.csv  rawdata.csv  virtual_data_code_examples.py
examples/plot_bulk_compositions/: example_plot_bulk_compositions.py
pdoc_templates/: module.html.jinja2
src/D47crunch/: __init__.py
tests/: test_D47crunch.py  test_covar_for_constained_params.py  test_hist_in_residuals.py  test_plot_bulk_compositions.py
