[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "D47crunch"
authors = [{name = "Mathieu Daëron", email = "mathieu@daeron.fr"}]
readme = "readme.md"
dynamic = ["version", "description"]
license = {text = "BSD-3-Clause"}
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.21",
    "scipy >=1.7.0",
    "matplotlib >=3.4.2",
    "lmfit >=1.0.2",
    "typer >=0.9.0",
]

[project.urls]
Home = "https://github.com/mdaeron/D47crunch"
Documentation = "https://mdaeron.github.io/D47crunch"

[project.scripts]
D47crunch = "D47crunch:__cli"
