[project]
name = "D47crunch"
authors = [{name = "Mathieu Daëron", email = "mathieu@daeron.fr"}]
dynamic = ["version", "description"]
readme = "readme.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">= 3.12"
dependencies = [
    "numpy >=1.21",
    "scipy >=1.7.0",
    "matplotlib >=3.4.2",
    "lmfit >=1.0.2",
    "typer >=0.17",
    "rich",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
D47crunch = { path = ".", editable = true }

[tool.pixi.system-requirements]
macos = "12.7.5"

[tool.pixi.dependencies]
pdoc = ">=14.4.0,<15"

[tool.pixi.tasks]
docs = {cmd = 'python build_doc.py'}

[project.urls]
Home = "https://github.com/mdaeron/D47crunch"
Documentation = "https://mdaeron.github.io/D47crunch"

[project.scripts]
D47crunch = "D47crunch:__cli"
